kubernetes/apps/media/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values: ["node02"]
          - weight: 80
            preference:
              matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values: ["node04"]
      securityContext:
        supplementalGroups: [44, 109, 996, 997]
      containers:
      - name: plex
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
        image: lscr.io/linuxserver/plex:latest
        ports:
        - containerPort: 32400
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /movies
          subPath: movies
        - name: media
          mountPath: /tv
          subPath: tv
        - name: dev-dri
          mountPath: /dev/dri
        - name: dev-dma-heap
          mountPath: /dev/dma_heap
        - name: tmp
          mountPath: /tmp
        resources:
          requests:
            memory: "1.5Gi"
            cpu: "1000m"
          limits:
            memory: "6Gi"
            cpu: "3000m"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: plex-config
      - name: media
        persistentVolumeClaim:
          claimName: media-storage-1
      - name: dev-dri
        hostPath:
          path: /dev/dri
      - name: dev-dma-heap
        hostPath:
          path: /dev/dma_heap
      - name: tmp
        emptyDir:
          sizeLimit: 8Gi
